<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/button_blue_selector"
            android:title="@string/item_home" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/button_blue_selector"
            android:title="@string/item_category" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/button_blue_selector"
            android:title="@string/item_other" />

    </group>

    <item android:title="@string/sub_item_title">
        <menu>
            <item
                android:id="@+id/nav_sub_logout"
                android:title="@string/sub_item_logout"
                android:icon="@drawable/button_blue_selector"
                />

            <item
                android:id="@+id/nav_sub_test"
                android:title="Sub item 2"
                android:icon="@drawable/button_blue_selector"/>
        </menu>
    </item>


</menu>
