<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/current_password_view"
                style="@style/CustomEditText"
                android:hint="@string/prompt_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_password_view"
                style="@style/CustomEditText"
                android:hint="@string/prompt_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_password_confirmation_view"
                style="@style/CustomEditText"
                android:hint="@string/prompt_password_confirmation"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/change_password_button"
            style="@style/LongBlueActionButton"
            android:text="@string/action_continue" />
    </LinearLayout>

    <include layout="@layout/toolbar" />

</RelativeLayout>
