<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@drawable/clothing_women_and_men_300x512" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_change"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="250dp"
                android:gravity="center_horizontal"
                android:text="@string/text_example_message_long"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/view_indicator_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/text_change">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <!--<com.viewpagerindicator.CirclePageIndicator-->
                <!--android:id="@+id/indicator"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="#FFCCCCCC"-->
                <!--android:padding="10dip"-->
                <!--app:fillColor="#FF888888"-->
                <!--app:pageColor="#88FF0000"-->
                <!--app:radius="10dp"-->
                <!--app:strokeColor="#FF000000"-->
                <!--app:strokeWidth="2dp" />-->

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_and_register_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/view_indicator_container"
                android:layout_marginBottom="10dp"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/register_button"
                    style="@style/LoginButton"
                    android:text="@string/action_register" />

                <Button
                    android:id="@+id/login_button"
                    style="@style/RegisterButton"
                    android:text="@string/action_sign_in" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
